--- a/frontend/translations/common/se.json
+++ b/frontend/translations/common/se.json
@@ -57,5 +57,12 @@
     "hideAll": "Hide all",
     "authConsent": "Allow this application to login with your MOOC account?",
     "allow": "Allow",
-    "deny": "Deny"
+    "deny": "Deny",
+    "signinHYCaption": "Log in using University of Helsinki credentials",
+    "signinHakaCaption": "Log in using <a href=\"https://www.csc.fi/en/haka-kayttajatunnistusjarjestelma\" target=\"_blank\">Haka identity federation</a> credentials",
+    "signinError_auth-fail": "Authorization failed",
+    "signinError_already-signed-in": "You are already signed in",
+    "signinError_no-user-found": "We didn't find an account with these credentials. Please register a new account or connect your existing MOOC.fi account.",
+    "signinError_unknown": "An unknown error occurred: {{message}}"
+  
 }
