--- a/frontend/translations/common/fi.json
+++ b/frontend/translations/common/fi.json
@@ -59,7 +59,7 @@
     "allow": "Allow",
     "deny": "Deny",
     "signinHYCaption": "Kirjaudu sisään Helsingin yliopiston tunnuksilla",
-    "signinHakaCaption": "Kirjaudu sisään <a href=\"https://www.csc.fi/haka-kayttajatunnistusjarjestelma\" target=\"_blank\">Haka-käyttäjätunnistusjärjestelmän</a> tunnuksilla",
+    "signinHakaCaption": "Kirjaudu sisään <a href=\"https://www.csc.fi/haka-kayttajatunnistusjarjestelma\" target=\"_blank\">HAKA-luottamusverkoston</a> tunnuksilla",
     "signinError_auth-fail": "Kirjautumimnen epäonnistui.",
     "signinError_already-signed-in": "Olet jo kirjautunut sisään.",
     "signinError_no-user-found": "Emme löytäneet käyttäjää näillä tunnuksilla. Ole hyvä ja rekisteröi uusi tili, tai kirjaudu sisään MOOC.fi-tunnuksillasi ja yhdistä tili asetuksista.",
