revert mdx-js to enable mdx loading

--- a/frontend/static/md_pages/registering_completions_en.mdx
+++ b/frontend/static/md_pages/registering_completions_en.mdx
@@ -70,6 +70,6 @@ The transcript will be delivered to you electronically through email. Present th
 </ContentBox>
 
 export const meta = {
-  title: "Frequenty asked questions: Registering completions",
+  title: "Frequently asked questions: Registering completions",
   ingress: "On this page, you will find answers to questions related to registering completions and gaining credits."
 }
