--- a/frontend/static/md_pages/lut_module.mdx
+++ b/frontend/static/md_pages/lut_module.mdx
@@ -1,25 +1,30 @@
 import {ContentContainer, ModuleHeader, ModuleDescriptionText} from "/components/Home/ModuleDisplay/Common"
 import CustomModuleContent from "/components/Home/ModuleDisplay/CustomModuleContent"
+import CustomModule from "/components/Home/ModuleDisplay/CustomModule"
 
 <ContentContainer>
 
 <ModuleHeader>
-LUT
+<img src="/static/images/LUT-LOGO-WHITE-PNG.png" style={{width: "100%"}} alt="LUT" />
 </ModuleHeader>
 
 <ModuleDescriptionText>
-LUT tarjoaa yhä laajemmin ja joustavammin ohjelmistotuotannon opintoja avoimen yliopiston joustavina etäopintoina. Voit valita tietotekniikan kandidaatintutkintoon kuuluvia yksittäisiä opintojaksoja tai suorittaa laajemman kokonaisuuden.
+LUT-yliopisto tarjoaa ohjelmistotuotannon opintoja joustavina etäopintoina. Opinnot sopivat sinulle, jos sinulla on hieman ohjelmointitaustaa ja haluat täydentää ohjelmistoihin liittyvää suunnittelun, prosessien tai laadunhallinnan osaamistasi.
 </ModuleDescriptionText>
 
 </ContentContainer>
 
-<CustomModuleContent>
+<CustomModuleContent link="https://www.lut.fi/ko/opiskelu/avoin-yliopisto/ohjelmistotuotanto" label="Ohjelmistotuotannon opintokokonaisuus">
 
-### Kesällä 2022 tarjotaan intensiiviversiot osasta kursseista. Ilmoittautuminen kesäopintoihin päättyy 8.5.2022.
-
+### Kesällä 2022 LUT-yliopisto tarjoaa intensiiviversiot osasta kursseista. Ilmoittautuminen kesäopintoihin päättyy 8.5.2022.
 - Software Engineering Models and Modeling (englanniksi)
 - User Interfaces and Usability (englanniksi)
 - Ohjelmistotuotanto
 - Ohjelmistojen laadunhallinta (jatkuva ilmoittautuminen)
 
+Löydät lisätietoa ohjelmistotuotannon opintokokonaisuudesta ja yksittäisistä kursseista, sekä kurssi-ilmoittautumisen LUTin sivuilta.
 </CustomModuleContent>
+
+export default ({ children }) => (
+  <CustomModule children={children} backgroundColor="#000000" />
+)
