--- a/frontend/translations/navi/fi.json
+++ b/frontend/translations/navi/fi.json
@@ -1,35 +1,42 @@
 {
-    "naviItems": [
-        {
-            "title": "Kaikille avoimia kursseja",
-            "text":
-              "Verkko-oppimista parhaimmillaan. Älä huolehdi kurssimaksuista tai koulumatkoista, vaan opiskele siellä missä sinulle sopii. MOOCit eli kaikille avoimet verkkokurssit (Massive Open Online Course) ovat nimensä mukaisesti avoimia, ilmaisia ja  verkkopohjaisia kursseja.",
-            "linkText": "Kurssit ",
-            "img": "AllCourses.jpg",
-            "link": "#courses"
-          },
-          {
-            "title": "Ensimmäisen vuoden opinnot kaikille",
-            "text":
-              "Digital Education for All -hanke avaa tietojenkäsittelytieteen ensimmäisen vuoden kaikille. Helsingin yliopiston johtamassa Digital Education for All -hankkeessa ovat myös mukana Aalto-yliopisto, Jyväskylän yliopisto, Oulun yliopisto ja Turun yliopisto.",
-            "linkText": "DEFA -hanke",
-            "img": "DEFA.jpg",
-            "link": "https://www.helsinki.fi/fi/projektit/digital-education-for-all"
-          },
-          {
-            "title": "Opeta kursseja omassa luokassasi.",
-            "text":
-              "Opettaja! Haluatko kurssimme luokkaasi omilla pistelistoillasi ja omalla aikataulullasi. Kaikkia kurssejamme saa käyttää osana omaa opetustaan. Katso lisää Opettajalle-sivulta!",
-            "linkText": "Opettajien sivut",
-            "img": "Opettajien.jpg",
-            "link": "/teachers"
-          },
-          {
-            "title": "Opiskele kokonaisuuksia",
-            "text": "Kokoa oma kurssivalikoimasi laajemmista opintokokonaisuuksista.",
-            "linkText": "Opintokokonaisuudet",
-            "img": "taydennysKoulutus.jpg",
-            "link": "#modules"
-          }
-        ]
+  "naviItems": [
+    {
+      "title": "Kaikille avoimia kursseja",
+      "text": "Verkko-oppimista parhaimmillaan. Älä huolehdi kurssimaksuista tai koulumatkoista, vaan opiskele siellä missä sinulle sopii. MOOCit eli kaikille avoimet verkkokurssit (Massive Open Online Course) ovat nimensä mukaisesti avoimia, ilmaisia ja  verkkopohjaisia kursseja.",
+      "linkText": "Kurssit",
+      "img": "AllCourses.jpg",
+      "link": "#courses"
+    },
+    {
+      "title": "Ensimmäisen vuoden opinnot kaikille",
+      "text": "Digital Education for All -hanke avaa tietojenkäsittelytieteen ensimmäisen vuoden kaikille. Helsingin yliopiston johtamassa Digital Education for All -hankkeessa ovat myös mukana Aalto-yliopisto, Jyväskylän yliopisto, Oulun yliopisto ja Turun yliopisto.",
+      "linkText": "DEFA-hanke",
+      "img": "DEFA.jpg",
+      "link": "https://www.helsinki.fi/fi/projektit/digital-education-for-all"
+    },
+    {
+      "title": "Opeta kursseja omassa luokassasi.",
+      "text": "Opettaja! Haluatko kurssimme luokkaasi omilla pistelistoillasi ja omalla aikataulullasi. Kaikkia kurssejamme saa käyttää osana omaa opetustaan. Katso lisää Opettajalle-sivulta!",
+      "linkText": "Opettajien sivut",
+      "img": "Opettajien.jpg",
+      "link": "/teachers"
+    },
+    {
+      "title": "Opiskele kokonaisuuksia",
+      "text": "Kokoa oma kurssivalikoimasi laajemmista opintokokonaisuuksista.",
+      "linkText": "Opintokokonaisuudet",
+      "img": "taydennysKoulutus.jpg",
+      "link": "#modules"
+    }
+  ],
+  "customNaviItems": [
+    {
+      "title": "LUT",
+      "text": "LUT-yliopisto tarjoaa ohjelmistotuotannon opintoja joustavina etäopintoina. Opinnot sopivat sinulle, jos sinulla on hieman ohjelmointitaustaa ja haluat täydentää ohjelmistoihin liittyvää suunnittelun, prosessien tai laadunhallinnan osaamistasi.",
+      "titleImg": "/static/images/LUT-LOGO-PNG.png",
+      "link": "#lut",
+      "linkText": "LUT"
+    }
+  ],
+  "partners": "Yhteistyökumppanien sisältö"
 }
