add partner divider before custom module as well; clean up

--- a/frontend/translations/common/fi.json
+++ b/frontend/translations/common/fi.json
@@ -54,6 +54,7 @@
     "search": "Etsi...",
     "reset": "Tyhjennä",
     "showAll": "Näytä kaikki",
-    "hideAll": "Piilota kaikki"
+    "hideAll": "Piilota kaikki",
+    "partners": "Yhteistyökumppanien sisältöä"
 }
 
