--- a/frontend/translations/common/en.json
+++ b/frontend/translations/common/en.json
@@ -54,6 +54,6 @@
     "search": "Search...",
     "reset": "Reset",
     "showAll": "Show all",
-    "hideAll": "Hide all"
-
+    "hideAll": "Hide all",
+    "partners": "Content from our partners"
 }
