ukraine info in english

--- a/frontend/translations/common/fi.json
+++ b/frontend/translations/common/fi.json
@@ -55,6 +55,9 @@
     "reset": "Tyhjennä",
     "showAll": "Näytä kaikki",
     "hideAll": "Piilota kaikki",
-    "partners": "Yhteistyökumppanien sisältöä"
+    "partners": "Yhteistyökumppanien sisältöä",
+    "ukraineText": "Auta Ukrainan konfliktista kärsiviä.",
+    "ukraineLink": "https://www.punainenristi.fi/lahjoita/katastrofirahasto/",
+    "ukraineLinkText": "Lahjoita Suomen Punaisen Ristin katastrofirahastoon"
 }
 
