--- a/frontend/translations/common/se.json
+++ b/frontend/translations/common/se.json
@@ -55,5 +55,8 @@
     "reset": "Reset",
     "showAll": "Show all",
     "hideAll": "Hide all",
-    "partners": "Content from our partners"
+    "partners": "Content from our partners",
+    "ukraineText": "Help the victims of the conflict in Ukraine.",
+    "ukraineLink": "https://www.redcross.fi/donate/disaster-relief-fund/",
+    "ukraineLinkText": "Donate to the Finnish Red Cross Disaster Relief Fund"
 }
