--- a/frontend/translations/pages/en.json
+++ b/frontend/translations/pages/en.json
@@ -1,65 +1,58 @@
 {
   "title": {
-    "/[lng]/courses": "Courses",
-    "/[lng]/courses/[slug]": "Course dashboard - {{title}}", 
-    "/[lng]/courses/[slug]/edit": "Edit course - {{title}}", 
-    "/[lng]/courses/[slug]/completions": "Completions - {{title}}", 
-    "/[lng]/courses/[slug]/points": "Points - {{title}}", 
-    "/[lng]/courses/new": "New course",
-    "/[lng]/installation/netbeans": "NetBeans installation",
-    "/[lng]/installation/vscode": "VSCode installation",
-    "/[lng]/profile": "My profile",
-    "/[lng]/profile/completions": "My completions",
-    "/[lng]/profile/points": "My points",
-    "/[lng]/study-modules": "Study modules",
-    "/[lng]/study-modules/[slug]/edit": "Edit study module",
-    "/[lng]/study-modules/new": "New study module",
-    "/[lng]/users/[id]": "User - {{title}}",
-    "/[lng]/users/[id]/completions": "Completions - {{title}}",
-    "/[lng]/users/[id]/summary": "Summary - {{title}}",
-    "/[lng]/users/search": "Search users",
-    "/[lng]/users/search/[text]": "Search users - [[text]]",
-    "/[lng]/users": "Users",
-    "/[lng]/sign-in": "Sign in",
-    "/[lng]/sign-up": "Sign up",
-    "/[lng]/teachers": "For teachers",
-    "/[lng]/register": "Register organization",
-    "/[lng]/register-completion/[slug]": "Register completion - {{title}}",
-    "/[lng]/email-templates": "Email templates",
-    "/[lng]/email-templates/[id]": "Edit email template - {{title}}",
-    "/[lng]/research-consent": "Research consent",
-    "/[lng]/register-completion": "Register completion",
-    "/[lng]/faq": "Frequently asked questions",
-    "/fi/faq/suoritusten_rekisterointi": "",
-    "/fi/faq/registering_completions": "",
-    "/en/faq/registering_completions": "Frequenty asked questions: Registering completions",
-    "/en/faq/suoritusten_rekisterointi": "Frequenty asked questions: Registering completions",
+    "/courses": "Courses",
+    "/courses/[slug]": "Course dashboard - {{title}}", 
+    "/courses/[slug]/edit": "Edit course - {{title}}", 
+    "/courses/[slug]/completions": "Completions - {{title}}", 
+    "/courses/[slug]/points": "Points - {{title}}", 
+    "/courses/new": "New course",
+    "/installation/netbeans": "NetBeans installation",
+    "/installation/vscode": "VSCode installation",
+    "/profile": "My profile",
+    "/profile/completions": "My completions",
+    "/profile/points": "My points",
+    "/study-modules": "Study modules",
+    "/study-modules/[slug]/edit": "Edit study module",
+    "/study-modules/new": "New study module",
+    "/users/[id]": "User - {{title}}",
+    "/users/[id]/completions": "Completions - {{title}}",
+    "/users/[id]/summary": "Summary - {{title}}",
+    "/users/search": "Search users",
+    "/users/search/[text]": "Search users - [[text]]",
+    "/users": "Users",
+    "/sign-in": "Sign in",
+    "/sign-up": "Sign up",
+    "/teachers": "For teachers",
+    "/register": "Register organization",
+    "/register-completion/[slug]": "Register completion - {{title}}",
+    "/email-templates": "Email templates",
+    "/email-templates/[id]": "Edit email template - {{title}}",
+    "/research-consent": "Research consent",
     "/register-completion": "Register completion",
+    "/faq": "Frequently asked questions",
+    "/faq/registering_completions": "Frequenty asked questions: Registering completions",
+    "/faq/suoritusten_rekisterointi": "Frequenty asked questions: Registering completions",
     "/": "Home"
   },
   "breadcrumb": {
-    "/[lng]/courses/[slug]": "Course dashboard",
-    "/[lng]/courses/[slug]/edit": "Edit", 
-    "/[lng]/courses/[slug]/completions": "Completions",
-    "/[lng]/courses/[slug]/points": "Points",
-    "/[lng]/courses/new": "New",
-    "/[lng]/study-modules/[slug]/edit": "Edit",
-    "/[lng]/users/[id]": "User", 
-    "/[lng]/users/[id]/completions": "Completions",
-    "/[lng]/users/[id]/summary": "Summary",
-    "/[lng]/register-completion/[slug]": "Register completion",
-    "/[lng]/study-modules/new": "New",
-    "/[lng]/users/search": "Search",
-    "/[lng]/email-templates/[id]": "Edit",
-    "/[lng]/faq": "Frequently asked questions",
-    "/[lng]/installation": "Installation",
-    "/en/installation/vscode": "VSCode",
-    "/en/installation/netbeans": "Netbeans",
-    "/fi/installation/vscode": "",
-    "/fi/installation/netbeans": "",
-    "/en/faq/registering_completions": "Registering completions",
-    "/en/faq/suoritusten_rekisterointi": "Registering completions",
-    "/fi/faq/suoritusten_rekisterointi": "",
-    "/fi/faq/registering_completions": ""
+    "/courses/[slug]": "Course dashboard",
+    "/courses/[slug]/edit": "Edit", 
+    "/courses/[slug]/completions": "Completions",
+    "/courses/[slug]/points": "Points",
+    "/courses/new": "New",
+    "/study-modules/[slug]/edit": "Edit",
+    "/users/[id]": "User", 
+    "/users/[id]/completions": "Completions",
+    "/users/[id]/summary": "Summary",
+    "/register-completion/[slug]": "Register completion",
+    "/study-modules/new": "New",
+    "/users/search": "Search",
+    "/email-templates/[id]": "Edit",
+    "/faq": "Frequently asked questions",
+    "/installation": "Installation",
+    "/installation/vscode": "VSCode",
+    "/installation/netbeans": "Netbeans",
+    "/faq/registering_completions": "Registering completions",
+    "/faq/suoritusten_rekisterointi": "Registering completions"
   }
 }
