--- a/frontend/translations/pages/fi.json
+++ b/frontend/translations/pages/fi.json
@@ -1,65 +1,58 @@
 {
   "title": {
-    "/[lng]/courses": "Kurssit",
-    "/[lng]/courses/[slug]": "Kurssin ohjausnäkymä - {{title}}", 
-    "/[lng]/courses/[slug]/edit": "Muokkaa kurssia - {{title}}", 
-    "/[lng]/courses/[slug]/completions": "Suoritukset - {{title}}", 
-    "/[lng]/courses/[slug]/points": "Pisteet - {{title}}", 
-    "/[lng]/courses/new": "Uusi kurssi",
-    "/[lng]/installation/netbeans": "NetBeansin asennus",
-    "/[lng]/installation/vscode": "VSCoden asennus",
-    "/[lng]/profile": "Oma profiili",
-    "/[lng]/profile/completions": "Omat suoritukset",
-    "/[lng]/profile/points": "Omat pisteet",
-    "/[lng]/study-modules": "Opintokokonaisuudet",
-    "/[lng]/study-modules/[slug]/edit": "Muokkaa opintokokonaisuutta - {{title}}",
-    "/[lng]/study-modules/new": "Uusi opintokokonaisuus",
-    "/[lng]/users/[id]": "Käyttäjä - {{title}}",
-    "/[lng]/users/[id]/completions": "Suoritukset - {{title}}",
-    "/[lng]/users/[id]/summary": "Yhteenveto - {{title}}",
-    "/[lng]/users/search": "Hae käyttäjiä",
-    "/[lng]/users/search/[text]": "Hae käyttäjiä - [[text]]",
-    "/[lng]/users": "Käyttäjät",
-    "/[lng]/sign-in": "Kirjaudu",
-    "/[lng]/sign-up": "Rekisteröidy",
-    "/[lng]/teachers": "Opettajille",
-    "/[lng]/register": "Rekisteröidy organisaatioon",
-    "/[lng]/register-completion/[slug]": "Rekisteröi suoritus - {{title}}",
-    "/[lng]/email-templates": "Email-mallit",
-    "/[lng]/email-templates/[id]": "Muokkaa email-mallia - {{title}}",
-    "/[lng]/research-consent": "Osallistuminen tutkimukseen",
-    "/[lng]/register-completion": "Rekisteröi suoritus",
-    "/[lng]/faq": "Usein kysytyt kysymykset",
-    "/fi/faq/suoritusten_rekisterointi": "Usein kysytyt kysymykset: Suoritusten rekisteröinti",
-    "/fi/faq/registering_completions": "Usein kysytyt kysymykset: Suoritusten rekisteröinti",
-    "/en/faq/registering_completions": "",
-    "/en/faq/suoritusten_rekisterointi": "",
+    "/courses": "Kurssit",
+    "/courses/[slug]": "Kurssin ohjausnäkymä - {{title}}", 
+    "/courses/[slug]/edit": "Muokkaa kurssia - {{title}}", 
+    "/courses/[slug]/completions": "Suoritukset - {{title}}", 
+    "/courses/[slug]/points": "Pisteet - {{title}}", 
+    "/courses/new": "Uusi kurssi",
+    "/installation/netbeans": "NetBeansin asennus",
+    "/installation/vscode": "VSCoden asennus",
+    "/profile": "Oma profiili",
+    "/profile/completions": "Omat suoritukset",
+    "/profile/points": "Omat pisteet",
+    "/study-modules": "Opintokokonaisuudet",
+    "/study-modules/[slug]/edit": "Muokkaa opintokokonaisuutta - {{title}}",
+    "/study-modules/new": "Uusi opintokokonaisuus",
+    "/users/[id]": "Käyttäjä - {{title}}",
+    "/users/[id]/completions": "Suoritukset - {{title}}",
+    "/users/[id]/summary": "Yhteenveto - {{title}}",
+    "/users/search": "Hae käyttäjiä",
+    "/users/search/[text]": "Hae käyttäjiä - [[text]]",
+    "/users": "Käyttäjät",
+    "/sign-in": "Kirjaudu",
+    "/sign-up": "Rekisteröidy",
+    "/teachers": "Opettajille",
+    "/register": "Rekisteröidy organisaatioon",
+    "/register-completion/[slug]": "Rekisteröi suoritus - {{title}}",
+    "/email-templates": "Email-mallit",
+    "/email-templates/[id]": "Muokkaa email-mallia - {{title}}",
+    "/research-consent": "Osallistuminen tutkimukseen",
     "/register-completion": "Rekisteröi suoritus",
+    "/faq": "Usein kysytyt kysymykset",
+    "/faq/suoritusten_rekisterointi": "Usein kysytyt kysymykset: Suoritusten rekisteröinti",
+    "/faq/registering_completions": "Usein kysytyt kysymykset: Suoritusten rekisteröinti",
     "/": "Etusivu"
   },
   "breadcrumb": {
-    "/[lng]/courses/[slug]": "Kurssin ohjausnäkymä", 
-    "/[lng]/courses/[slug]/edit": "Muokkaa", 
-    "/[lng]/courses/[slug]/completions": "Suoritukset", 
-    "/[lng]/courses/[slug]/points": "Pisteet", 
-    "/[lng]/courses/new": "Uusi",
-    "/[lng]/study-modules/[slug]/edit": "Muokkaa", 
-    "/[lng]/study-modules/new": "Uusi",
-    "/[lng]/users/[id]": "Käyttäjä",
-    "/[lng]/users/[id]/completions": "Suoritukset",
-    "/[lng]/users/[id]/summary": "Yhteenveto",
-    "/[lng]/users/search": "Hae",
-    "/[lng]/register-completion/[slug]": "Rekisteröi suoritus",
-    "/[lng]/email-templates/[id]": "Muokkaa",
-    "/[lng]/faq": "Usein kysytyt kysymykset",
-    "/[lng]/installation": "Asennus",
-    "/en/installation/vscode": "",
-    "/en/installation/netbeans": "",
-    "/fi/installation/vscode": "VSCode",
-    "/fi/installation/netbeans": "Netbeans",
-    "/en/faq/registering_completions": "",
-    "/en/faq/suoritusten_rekisterointi": "",
-    "/fi/faq/suoritusten_rekisterointi": "Suoritusten rekisteröinti",
-    "/fi/faq/registering_completions": "Suoritusten rekisteröinti"
+    "/courses/[slug]": "Kurssin ohjausnäkymä", 
+    "/courses/[slug]/edit": "Muokkaa", 
+    "/courses/[slug]/completions": "Suoritukset", 
+    "/courses/[slug]/points": "Pisteet", 
+    "/courses/new": "Uusi",
+    "/study-modules/[slug]/edit": "Muokkaa", 
+    "/study-modules/new": "Uusi",
+    "/users/[id]": "Käyttäjä",
+    "/users/[id]/completions": "Suoritukset",
+    "/users/[id]/summary": "Yhteenveto",
+    "/users/search": "Hae",
+    "/register-completion/[slug]": "Rekisteröi suoritus",
+    "/email-templates/[id]": "Muokkaa",
+    "/faq": "Usein kysytyt kysymykset",
+    "/installation": "Asennus",
+    "/installation/vscode": "VSCode",
+    "/installation/netbeans": "Netbeans",
+    "/faq/suoritusten_rekisterointi": "Suoritusten rekisteröinti",
+    "/faq/registering_completions": "Suoritusten rekisteröinti"
   }
 }
