--- a/frontend/static/md_pages/netbeans_installation_macOS_fi.mdx
+++ b/frontend/static/md_pages/netbeans_installation_macOS_fi.mdx
@@ -1,4 +1,4 @@
-import {ContentBox} from "/pages/[lng]/installation/netbeans"
+import {ContentBox} from "/pages/installation/netbeans"
 
 <ContentBox>
 
