--- a/frontend/static/md_pages/ohjelmoinnin_aloittaminen_en.mdx
+++ b/frontend/static/md_pages/ohjelmoinnin_aloittaminen_en.mdx
@@ -1,4 +1,4 @@
-import {ContentBox, SectionBox} from "/pages/[lng]/installation/netbeans"
+import {ContentBox, SectionBox} from "/pages/installation/netbeans"
 
 <ContentBox>
 
