--- a/frontend/static/md_pages/ohjelmoinnin_aloittaminen_vscode_fi.mdx
+++ b/frontend/static/md_pages/ohjelmoinnin_aloittaminen_vscode_fi.mdx
@@ -1,4 +1,4 @@
-import { ContentBox } from "/pages/[lng]/installation/vscode"
+import { ContentBox } from "/pages/installation/vscode"
 
 <ContentBox>
 
