--- a/frontend/static/md_pages/vscode_installation_Linux_fi.mdx
+++ b/frontend/static/md_pages/vscode_installation_Linux_fi.mdx
@@ -1,4 +1,4 @@
-import {ContentBox} from "/pages/[lng]/installation/vscode"
+import {ContentBox} from "/pages/installation/vscode"
 import StartingProgrammingQuide from "/static/md_pages/ohjelmoinnin_aloittaminen_vscode_fi.mdx"
 import TableOfContents from "/static/md_pages/sisallysluettelo_vscode_fi.mdx"
 
