--- a/frontend/translations/common/fi.json
+++ b/frontend/translations/common/fi.json
@@ -56,7 +56,7 @@
     "showAll": "Näytä kaikki",
     "hideAll": "Piilota kaikki",
     "partners": "Yhteistyökumppanien sisältöä",
-    "ukraineText": "Auta Ukrainan konfliktista kärsiviä.",
+    "ukraineText": "Auta Ukrainan sodasta kärsiviä.",
     "ukraineLink": "https://www.punainenristi.fi/lahjoita/katastrofirahasto/",
     "ukraineLinkText": "Lahjoita Suomen Punaisen Ristin katastrofirahastoon"
 }
