--- a/frontend/translations/common/se.json
+++ b/frontend/translations/common/se.json
@@ -56,7 +56,7 @@
     "showAll": "Show all",
     "hideAll": "Hide all",
     "partners": "Content from our partners",
-    "ukraineText": "Help the victims of the conflict in Ukraine.",
+    "ukraineText": "Help the victims of the war in Ukraine.",
     "ukraineLink": "https://www.redcross.fi/donate/disaster-relief-fund/",
     "ukraineLinkText": "Donate to the Finnish Red Cross Disaster Relief Fund"
 }
