new frontpage WIP: hero, news, selected courses

--- a/frontend/translations/common/en.json
+++ b/frontend/translations/common/en.json
@@ -58,5 +58,6 @@
     "partners": "Content from our partners",
     "ukraineText": "Help the victims of the war in Ukraine.",
     "ukraineLink": "https://www.redcross.fi/donate/disaster-relief-fund/",
-    "ukraineLinkText": "Donate to the Finnish Red Cross Disaster Relief Fund"
+    "ukraineLinkText": "Donate to the Finnish Red Cross Disaster Relief Fund",
+    "myProfile": "My profile"
 }
