--- a/frontend/translations/common/fi.json
+++ b/frontend/translations/common/fi.json
@@ -58,6 +58,7 @@
     "partners": "Yhteistyökumppanien sisältöä",
     "ukraineText": "Auta Ukrainan sodasta kärsiviä.",
     "ukraineLink": "https://www.punainenristi.fi/lahjoita/katastrofirahasto/",
-    "ukraineLinkText": "Lahjoita Suomen Punaisen Ristin katastrofirahastoon"
+    "ukraineLinkText": "Lahjoita Suomen Punaisen Ristin katastrofirahastoon",
+    "myProfile": "Oma profiili"
 }
 
