add privacy policy link to footer

--- a/frontend/static/md_pages/registering_completions_en.mdx
+++ b/frontend/static/md_pages/registering_completions_en.mdx
@@ -20,7 +20,7 @@ You can register your course completions through the following steps*:
 3. Clicking the button takes you to the Open University enrollment system.
 4. Complete Open University course enrollment.
 
-The credits will be registered within six weeks of enrollment. The credits will be added to the University of Helsinki study register. You will be able to view information on your course completions in the national [My Studyinfo](https://opintopolku.fi/oma-opintopolku/) service.
+The credits will be registered within six weeks of enrollment. The credits will be added to the University of Helsinki study register. You will be able to view information on your course completions in the national <a href="https://opintopolku.fi/oma-opintopolku/" target="_blank">My Studyinfo</a> service.
 
 <Note>
 * To electronically register a completion and receive credits, you will have to 
@@ -29,7 +29,7 @@ A) have a Finnish personal identity number (format: xxxxxxxx-xxxx), or
 
 B) be an exchange student at the University of Helsinki, or 
 
-C) be a student at a [HAKA member institution](https://wiki.eduuni.fi/display/CSCHAKA/Members+and+partners).
+C) be a student at a <a href="https://wiki.eduuni.fi/display/CSCHAKA/Members+and+partners" target="_blank">HAKA member institution</a>.
 
 #### If you are unable to enroll electronically:
 
@@ -44,7 +44,7 @@ A) have a Finnish personal identity number (format: xxxxxxxx-xxxx), or
 
 B) be an exchange student at the University of Helsinki, or 
 
-C) be a student at a [HAKA member institution](https://wiki.eduuni.fi/display/CSCHAKA/Members+and+partners).
+C) be a student at a <a href="https://wiki.eduuni.fi/display/CSCHAKA/Members+and+partners" target="_blank">HAKA member institution</a>.
 
 #### If you are unable to enroll electronically:
 
@@ -71,5 +71,6 @@ The transcript will be delivered to you electronically through email. Present th
 
 export const meta = {
   title: "Frequently asked questions: Registering completions",
+  breadcrumb: "Registering completions",
   ingress: "On this page, you will find answers to questions related to registering completions and gaining credits."
 }
