--- a/frontend/static/md_pages/registering_completions_fi.mdx
+++ b/frontend/static/md_pages/registering_completions_fi.mdx
@@ -26,7 +26,7 @@ Suoritus rekisteröidään sinulle kuuden viikon kuluessa kurssi-ilmoittautumise
 
 Jotta voit saada kurssista opintopisteet, sinun täytyy ensin ilmoittautua kurssille Avoimen yliopiston kautta. Lue lisää: [Kuinka saan opintopisteet mooc.fi -alustalla suorittamastani kurssista?](#opintopisteet) 
 
-Kun suoritus ja opintopisteet on rekisteröity sinulle, näet suorituksesi tiedot [Oma opintopolku-palvelusta](https://opintopolku.fi/oma-opintopolku/). Omasta opintopolusta voit välittää suoritustietosi omaan korkeakouluusi opintojen hyväksilukua varten. Omaan opintopolkuun kirjaudutaan pankkitunnuksilla.
+Kun suoritus ja opintopisteet on rekisteröity sinulle, näet suorituksesi tiedot <a href="https://opintopolku.fi/oma-opintopolku/" target="_blank">Oma opintopolku-palvelusta</a>. Omasta opintopolusta voit välittää suoritustietosi omaan korkeakouluusi opintojen hyväksilukua varten. Omaan opintopolkuun kirjaudutaan pankkitunnuksilla.
 
 Mikäli Oma Opintopolkupalvelun tiedot eivät oikeuta suorituksenhyväksilukuun omassa korkeakoulussasi, voit tilata virallisen opintorekisteriotteen osoitteesta <avoin-student@helsinki.fi>. Muista ilmoittaa seuraavat tiedot opintorekisteriotetta tilatessasi:
 
@@ -45,5 +45,6 @@ Ota huomioon, että jokainen korkeakoulu päättää itse toisessa korkeakouluss
 
 export const meta = {
   title: "Usein kysytyt kysymykset: Suoritusten rekisteröinti",
+  breadcrumb: "Suoritusten rekisteröinti",
   ingress: "Tältä sivulta löydät vastauksia kurssisuoritusten rekisteröintiin ja opintopisteisiin liittyviin kysymyksiin."
 }
