image optimization stuff

--- a/frontend/static/md_pages/lut_module.mdx
+++ b/frontend/static/md_pages/lut_module.mdx
@@ -1,11 +1,11 @@
-import {ContentContainer, ModuleHeader, ModuleDescriptionText} from "/components/Home/ModuleDisplay/Common"
+import {ContentContainer, ModuleHeader, ModuleImage, ModuleDescriptionText} from "/components/Home/ModuleDisplay/Common"
 import {CustomModule, CustomModuleContent} from "/components/Home/ModuleDisplay/CustomModule"
 import OutboundLink from "/components/OutboundLink"
 
 <ContentContainer>
 
 <ModuleHeader>
-<img src="/static/images/LUT-LOGO-WHITE-PNG.png" style={{width: "100%"}} alt="LUT" />
+  <ModuleImage src="LUT-LOGO-WHITE-PNG.png" alt="LUT" />
 </ModuleHeader>
 
 <ModuleDescriptionText>
