--- a/frontend/translations/navi/fi.json
+++ b/frontend/translations/navi/fi.json
@@ -33,7 +33,7 @@
     {
       "title": "LUT",
       "text": "LUT-yliopisto tarjoaa ohjelmistotuotannon opintoja joustavina etäopintoina. Opinnot sopivat sinulle, jos sinulla on hieman ohjelmointitaustaa ja haluat täydentää ohjelmistoihin liittyvää suunnittelun, prosessien tai laadunhallinnan osaamistasi.",
-      "titleImg": "/static/images/LUT-LOGO-PNG.png",
+      "titleImg": "LUT-LOGO-PNG.png",
       "link": "#lut",
       "linkText": "LUT"
     }
