--- a/frontend/translations/common/fi.json
+++ b/frontend/translations/common/fi.json
@@ -52,6 +52,7 @@
     "Ended": "Loppunut",
     "handledBy": "Handled by",
     "search": "Etsi...",
+    "filter": "Suodata",
     "reset": "Tyhjennä",
     "showAll": "Näytä kaikki",
     "hideAll": "Piilota kaikki",
