--- a/frontend/translations/register/fi.json
+++ b/frontend/translations/register/fi.json
@@ -3,5 +3,20 @@
   "join": "Liity",
   "leave": "Eroa",
   "search": "hae...",
-  "noResults": "Ei hakutuloksia haulla {{search}}."
+  "noResults": "Ei hakutuloksia haulla {{search}}.",
+  "title2": "Liity organisaatioon",
+  "joiningInformation1": "Liittymällä organisaatioon mahdollistat kurssisuoritustietojesi välittämisen Mooc.fi:stä omaan organisaatioosi. Organisaatiosi edustaja saa tiedon Mooc.fi:ssä opiskelemiesi kurssien pistemääristä, suorituksen tilasta, sekä muusta edistymiseen liittyvästä. Jokainen organisaatio päättää itse, kuinka se hyödyntää Mooc.fi:stä saatavia suoritustietoja. Voit kysyä lisää organisaatiosi edustajalta",
+  "joiningInformation2": "Opintosuoritusten käyttäminen osana tutkintoasi: Huomaa, että sinun täytyy ensin rekisteröidä suorituksesi Helsingin yliopiston opintorekisteriin. Suoritusten rekisteröinti edellyttää ilmoittautumisen kurssille Avoimen yliopiston kautta. Pääset ilmoittautumaan kurssille",
+  "joiningInformation3": "Oma profiili",
+  "joiningInformation4": "–sivusi kautta.",
+  "joiningInformation5": "Huomaathan, että organisaatioon rekisteröityminen on tarkoitettu ainoastaan organisaation opiskelijoille. Jos et siis ole organisaation",
+  "joiningInformation6": "opiskelija, et voi rekisteröityä organisaatioon.",
+  "joiningCheckbox": "Annan luvan kurssisuoritustietojeni jakamiseen organisaatiolle",
+  "joiningOrgIdHint": "Täytä tähän organisaatiotunnuksesi (opiskelijanumero tai vastaava)",
+  "joiningEmailHint1": "Käytäthän rekisteröitymiseen organisaatiosi sähköpostiosoitetta",
+  "joiningEmailHint2": "(",
+  "joiningEmailHint3": " -päätteinen)",
+  "registrationReceived": "Rekisteröinti vastaanotettu! Vahvistussähköposti lähetetty osoitteeseen",
+  "incorrectFormat": "Virheellinen sähköposti! Käytäthän organisaation sähköpostiasi.",
+  "hoverHint": "Anna ensin suostumuksesi kurssisuoritustietojen jakamiseen"
 }
