update frontend deps; remove cypress; refactor some backend userfunctions

--- a/frontend/static/md_pages/lut_module.mdx
+++ b/frontend/static/md_pages/lut_module.mdx
@@ -5,7 +5,7 @@ import OutboundLink from "/components/OutboundLink"
 <ContentContainer>
 
 <ModuleHeader>
-  <ModuleImage src="LUT-LOGO-WHITE-PNG.png" alt="LUT" />
+  <ModuleImage src="LUT-LOGO-WHITE-PNG.png" alt="LUT"></ModuleImage>
 </ModuleHeader>
 
 <ModuleDescriptionText>
